--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 <body>
   <main>
      <section class="section1">
-       <img src="images/image-equilibrium.jpg" alt="nft phot">
+       <div class="box" id="box">
+        <img src="images/icon-view.svg" id="view">
+       </div>
+       
      </section>
      <section class="section2">
         <div class="title"> Equilibrium #3429</div>
@@ -38,5 +41,6 @@
        <p>Creation of <span> Jules Wyvern</span></p>
      </section>
   </main>
+
 </body>
 </html>
